# dataclassql

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  TARGET.md  mkdocs.yml  pyproject.toml  pyrightconfig.json
docs/: index.md
skills/dataclassql/: SKILL.md
skills/dataclassql/agents/: openai.yaml
src/dclassql/: __init__.py  asdict.py  asdict.pyi  cli.py  codegen.py  db_pool.py  model_inspector.py  table_spec.py  typing.py
src/dclassql/model_inspector/: __init__.py  fields.py  graph.py  relationships.py  table_constraints.py  type_hints.py
src/dclassql/push/: __init__.py  base.py  sqlite.py
src/dclassql/runtime/: backends.py  client_base.py  datasource.py  json_value.py  sql_recorder.py  sqlite_adapters.py
src/dclassql/runtime/backends/: __init__.py  base.py  lazy.py  metadata.py  protocols.py  relation_view.py  sqlite.py  where_compiler.py
src/dclassql/templates/: asdict_stub.pyi.jinja
src/dclassql/templates/partials/: client_class.jinja  imports.jinja  macros.jinja  model_section.jinja
src/dclassql/utils/: ensure.py
src/typed_db/: __init__.py  codegen.py  model_inspector.py  sqlite_push.py  tsqlite.py
src/typed_db/push/: __init__.py  base.py  sqlite.py
src/typed_db/runtime/: backends.py  datasource.py
tests/: results.py  test_asdict.py  test_cli.py  test_codegen.py  test_codegen_context.py  test_db_pool.py  test_fake_self.py  test_fields.py  test_runtime_sqlite.py  test_sqlite_push.py  test_type_hints.py  test_typecheck.py
tests/runtime/: conftest.py  test_sqlite_basic.py  test_sqlite_datetime_tz.py  test_sqlite_enum.py  test_sqlite_filters.py  test_sqlite_guardrails.py  test_sqlite_mutations.py  test_sqlite_relations.py
