[project]
name = "typed-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "myuanz", email = "provefars@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "apswutils>=0.1.0",
    "fastlite>=0.2.1",
    "sqlite-utils>=3.38",
]
[project.optional-dependencies]
sqlite = [
    "apswutils>=0.1.0",
    "fastlite>=0.2.1",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
