[project]
name = "dclassql"
version = "0.5.0"
description = "A type-safe ORM generator for Python, creating fully type-hinted database clients from plain dataclass definitions."
readme = "README.md"
authors = [
    { name = "myuanz", email = "provefars@gmail.com" }
]
license = { text = "MIT" }
keywords = ["orm", "codegen", "sqlite", "dataclass", "typed"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",

    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
urls = { "Homepage" = "https://github.com/myuanz/dataclassql" }
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "pypika>=0.48.9",
    "typing_extensions>=4.12.2",
]

[project.scripts]
"dclassql" = "dclassql.cli:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.7",
    "pyright>=1.1.407",
    "pytest>=8.4.2",
]
